--- a/public/style.css
+++ b/public/style.css
@@ -267,12 +267,24 @@ nav
 
 .post
 {
-    width: 500px;
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.post-info
+{
+    width: 800px;
     padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+}
+
+.post img
+{
+    width: 350px;
+    border-radius: 10px;
 }
 
 .post h2
@@ -280,15 +292,17 @@ nav
     font-size: var(--title-post-font-size);
     letter-spacing: 1px;
     font-weight: 500;
+    align-self: flex-start;
 }
 
 .post p
 {
     height: max-content;
-    text-align: center;
+    text-align: justify;
     font-family: var(--font-text-family);
     line-height: 20px;
     margin: 10px 0 10px 0;
+    max-height: 120px;
 }
 
 .post a 
@@ -734,7 +748,7 @@ footer
     --text-font-size: 24px;
     --bg-color-article: #eee;
     --text-color: #996300;
-    --title-post-font-size: 30px;
+    --title-post-font-size: 40px;
     --font-text-family: 'Lato', sans-serif;
     --font-title-family: 'Playfair Display', serif;
     --title-category-font-size: 20px;
