--- a/layout/home.ejs
+++ b/layout/home.ejs
@@ -24,6 +24,36 @@
     </header>
     <%- body %> 
     <footer>
+        <img src="img/logo.png" alt="">
+        <div class="sections">
+            <div class="links">
+                <h1>Moc do 2</h1>
+                <ul>
+                    <li><a href="#">Strona główna</a></li>
+                    <li><a href="#">Wesprzyj nas</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <h1>Aktualności</h1>
+                <ul>
+                    <li><a href="#"><%= posts[posts.length - 1].title %></a></li>
+                    <li><a href="#"><%= posts[posts.length - 2].title %></a></li>
+                    <li><a href="#"><%= posts[posts.length - 3].title %></a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <h1>Terapie</h1>
+                <ul>
+                    <li><a href="#">Dogoterapia</a></li>
+                    <li><a href="#">Dogoterapia</a></li>
+                    <li><a href="#">Dogoterapia</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            &copy; Grafiki użyte na stronie są dozowlone do użytku dowolnego.
+        </div>
     </footer>
 </body>
 </html>
