Add responsive design

--- a/public/fontello/css/fontello-codes.css
+++ b/public/fontello/css/fontello-codes.css
@@ -1,3 +1,5 @@
 
+.icon-cancel:before { content: '\e800'; } /* '' */
 .icon-mail:before { content: '\e801'; } /* '' */
 .icon-phone:before { content: '\e802'; } /* '' */
+.icon-menu:before { content: '\f0c9'; } /* '' */
