--- a/layout/home.ejs
+++ b/layout/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, user-scalable=no">
     <title>Moc do 2</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontello/css/fontello-embedded.css">
@@ -13,6 +13,9 @@
     <header>
         <div class="logo">
             <img src="img/logo.png" alt="logo">
+        </div>
+        <div class="menu">
+            <i class="icon-menu"></i>
         </div>
         <nav>
             <div class="nav-item">Strona główna</div>
