--- a/public/fontello/css/fontello.css
+++ b/public/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?86196509');
-  src: url('../font/fontello.eot?86196509#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?86196509') format('woff2'),
-       url('../font/fontello.woff?86196509') format('woff'),
-       url('../font/fontello.ttf?86196509') format('truetype'),
-       url('../font/fontello.svg?86196509#fontello') format('svg');
+  src: url('../font/fontello.eot?90569856');
+  src: url('../font/fontello.eot?90569856#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?90569856') format('woff2'),
+       url('../font/fontello.woff?90569856') format('woff'),
+       url('../font/fontello.ttf?90569856') format('truetype'),
+       url('../font/fontello.svg?90569856#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?86196509#fontello') format('svg');
+    src: url('../font/fontello.svg?90569856#fontello') format('svg');
   }
 }
 */
@@ -54,5 +54,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
+.icon-cancel:before { content: '\e800'; } /* '' */
 .icon-mail:before { content: '\e801'; } /* '' */
 .icon-phone:before { content: '\e802'; } /* '' */
+.icon-menu:before { content: '\f0c9'; } /* '' */
