--- a/layout/home.ejs
+++ b/layout/home.ejs
@@ -18,11 +18,11 @@
             <i class="icon-menu"></i>
         </div>
         <nav>
-            <div class="nav-item">Strona główna</div>
-            <div class="nav-item">Aktualności</div>
-            <div class="nav-item">Terapie</div>
-            <div class="nav-item">Kontakt</div>
-            <div class="nav-item">Wesprzyj nas</div>
+            <div class="nav-item"><a href="/">Strona główna</a></div>
+            <div class="nav-item"><a href="#">Aktualności</a></div>
+            <div class="nav-item"><a href="#">Terapie</a></div>
+            <div class="nav-item"><a href="#">Kontakt</a></div>
+            <div class="nav-item"><a href="#">Wesprzyj nas</a></div>
         </nav>
     </header>
     <%- body %> 
