Add mobile swap animation

--- a/public/fontello/css/fontello-codes.css
+++ b/public/fontello/css/fontello-codes.css
@@ -3,3 +3,5 @@
 .icon-mail:before { content: '\e801'; } /* '' */
 .icon-phone:before { content: '\e802'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
+.icon-hand-grab-o:before { content: '\f255'; } /* '' */
+.icon-hand-pointer-o:before { content: '\f25a'; } /* '' */
