--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,6 +53,9 @@
         <div class="therapy-container">
             <h1>Nasza działalność</h1>
             <div class="therapy-types">
+                <div class="move-animation">
+                    <i class="icon-hand-pointer-o"></i>
+                </div>
                 <div class="therapy-type">
                     <div class="therapy-btn move-out">                    
                         <img src="img/lapa.png" alt=""> 
@@ -90,6 +93,9 @@
         <div class="team-container">
             <h1>Nasz team</h1>
             <div class="team-persons">
+                <div class="move-animation">
+                    <i class="icon-hand-pointer-o"></i>
+                </div>
                 <div class="person">
                     <img src="img/person2.jpg" alt="">
                     <div class="person-info">
