--- a/public/fontello/css/fontello.css
+++ b/public/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?90569856');
-  src: url('../font/fontello.eot?90569856#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?90569856') format('woff2'),
-       url('../font/fontello.woff?90569856') format('woff'),
-       url('../font/fontello.ttf?90569856') format('truetype'),
-       url('../font/fontello.svg?90569856#fontello') format('svg');
+  src: url('../font/fontello.eot?37560969');
+  src: url('../font/fontello.eot?37560969#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?37560969') format('woff2'),
+       url('../font/fontello.woff?37560969') format('woff'),
+       url('../font/fontello.ttf?37560969') format('truetype'),
+       url('../font/fontello.svg?37560969#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?90569856#fontello') format('svg');
+    src: url('../font/fontello.svg?37560969#fontello') format('svg');
   }
 }
 */
@@ -58,3 +58,5 @@
 .icon-mail:before { content: '\e801'; } /* '' */
 .icon-phone:before { content: '\e802'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
+.icon-hand-grab-o:before { content: '\f255'; } /* '' */
+.icon-hand-pointer-o:before { content: '\f25a'; } /* '' */
