--- a/public/style.css
+++ b/public/style.css
@@ -371,6 +371,7 @@ nav
     justify-content: space-evenly;
     align-items: center;
     padding-bottom: 25px;
+    position: relative;
 }
 
 .therapy-type
@@ -827,6 +828,22 @@ footer ul > li a
     font-size: 25px;
 }
 
+.move-animation
+{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #eee;
+    border: 1px solid #ccc;
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translateY(-50%) translateX(-80%);
+    animation: move-animation 1.5s infinite ease-in-out alternate;
+    z-index: 200;
+    display: none;
+}
+
 .open
 {
     visibility: visible;
@@ -891,6 +908,11 @@ footer ul > li a
 @keyframes smooth-section {
     0%{transform: translateY(100%); visibility: hidden; opacity: 0;}
     100%{transform: translateY(0); visibility: visible; opacity: 1;}
+}
+
+@keyframes move-animation {
+    0%{left: 80%; transform: translateX(-80%);}
+    100%{left: 20%; transform: translateX(-20%);}
 }
 
 :root
@@ -1000,6 +1022,13 @@ footer ul > li a
     header img 
     {
         margin-left: 50px;
+    }
+
+    .move-animation
+    {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
